# postgres-wire-issue25

./: .env  Makefile  README.md  docker-compose.yml  postgres-wire-issue25.cabal  seed.sql  stack.yaml  tfb-postgres.Dockerfile
src/: Main.hs
