name:                postgres-wire-issue25
version:             0.1.0.0
homepage:            https://github.com/naushadh/postgres-wire-issue25#readme
license:             BSD3
license-file:        LICENSE
author:              Naushadh
maintainer:          naushadh@protonmail.com
copyright:           2019 Naushadh
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable postgres-wire-issue25
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -O2 -funbox-strict-fields
  build-depends:
      base >= 4.7 && < 5
    , bytestring
    , text
    , mwc-random
    , attoparsec
    , wai
    , warp
    , http-types
    , resource-pool
    , postgres-wire
